--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Kristian Yrjölä",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/speech": "^0.9.1",
     "express": "^4.15.2",
     "jade": "^1.11.0",
     "morgan": "^1.8.1",
