--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/speech": "^0.9.1",
+    "body-parser": "^1.17.1",
+    "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "jade": "^1.11.0",
     "morgan": "^1.8.1",
